# ZeroWaste

./: .env.debug  .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/core/auth/: auth_manager.py  password_manager.py
app/core/shared/entity/: base_entity.py
app/core/shared/exception/: base_exceptions.py
app/core/shared/value_object/: common.py
app/core/store/application/: create_store.py  delete_store.py  get_store.py
app/core/store/domain/entity/: store.py
app/core/store/domain/repository/: store_repository.py
app/core/store/domain/value_object/: location.py
app/core/store/infrastructure/: store_repository_postgres.py
app/core/user/application/: delete_user.py  get_user.py  signup_user.py
app/core/user/domain/entity/: user.py
app/core/user/domain/repository/: user_repository.py
app/core/user/domain/value_object/: user_value_object.py
app/core/user/infrastructure/: user_repository_postgres.py
app/di/: store.py  user.py
app/rest_api/: exception_handlers.py
app/rest_api/auth/: auth_api.py
app/rest_api/store/: api_dto.py  dto.py  store_api.py
app/rest_api/user/: dto.py  user_api.py
config/: database.py  logger.py  settings.py
migrations/: env.py
migrations/versions/: 4e590052c275_init_stores.py  891d70b870f3_init_users.py
tests/unit/core/auth/: auth_manager_test.py  password_manager_test.py  token_manager_test.py
tests/unit/core/store/application/: create_store_test.py  delete_store_test.py  get_store_test.py
tests/unit/core/user/application/: delete_user_test.py  get_user_test.py  signup_user_test.py
