[tool.poetry]
name = "zerowaste"
version = "0.1.0"
description = "ZeroWaste - Stop wasting food"
authors = ["jv <jvsegarra@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
fastapi = "^0.75.2"
uvicorn = "^0.17.6"
alembic = "^1.7.7"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
